A fix and a small refactor
1. fix code not visible in light theme;
2. use hex code instead of rgb code for all.

--- a/public/question.css
+++ b/public/question.css
@@ -55,14 +55,14 @@ code {
     background-color: var(--code-bg);
     padding: 0.15rem;
     border-radius: 5px;
-    color: white;
+    color: var(--code-fg);
 }
 
 pre {
     background-color: var(--code-bg);
     padding: 1rem;
     border-radius: 5px;
-    color: var(--text-color);
+    color: var(--code-fg);
     overflow-x: auto;
     line-height: 1.35;
 }
